<resources>
    <string name="app_name" translatable="false">ExplURe</string>
    <string name="app_version" translatable="false">Version %1s</string>
    <string name="title_discover">Discover</string>
    <string name="title_search_results">Search Results</string>
    <string name="title_profile">Profile</string>
    <string name="title_created_routes">Created Routes</string>
    <string name="title_favorite_routes">Favorite Routes</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_map">Map</string>
    <string name="title_route_detail">Route Information</string>
    <string name="title_edit_route">Edit route</string>
    <string name="title_save_route">Save route</string>
    <string name="title_create_waypoint">Create waypoint</string>
    <string name="title_rate_route">Rate route</string>
    <string name="title_waypoint_detail">Waypoint Information</string>
    <string name="title_create_profile">Create profile</string>
    <string name="title_login">Login</string>
    <string name="title_register">Register</string>
    <string name="title_loading_screen">Loading screen</string>
    <string name="title_about">About this app</string>
    <string name="user_name" translatable="false">Max Mustermann</string>
    <string name="own_routes">Created Routes</string>
    <string name="delete_route">DELETE ROUTE</string>
    <string name="delete_route_message">"Are you sure that your route \"%1$s\" should be deleted?"</string>
    <string name="favorite_routes">Favorite Routes</string>
    <string name="remove_favorite">REMOVE FAVORITE</string>
    <string name="remove_favorite_message"> Are you sure that the route \"%1$s\" should be removed from your favorites?</string>
    <string name="test_route_example">My Route 001</string>
    <string name="test_route_timestamp">14.01.2021 15:15</string>
    <string name="statistics">Statistic Page</string>
    <string name="distance">Distance</string>
    <string name="covered_track">Covered track</string>
    <string name="covered_track_value">0m</string>
    <string name="started_routes">Started routes</string>
    <string name="started_routes_value">0</string>
    <string name="ended_routes">Finished routes</string>
    <string name="ended_routes_value">0</string>
    <string name="contents">Contents</string>
    <string name="created_routes">Created routes</string>
    <string name="created_routes_value">0</string>
    <string name="created_landmarks">Created landmarks</string>
    <string name="created_landmarks_value">0</string>
    <string name="interaction">Interaction</string>
    <string name="comments">Comments</string>
    <string name="comments_value">0</string>
    <string name="ratings">Ratings</string>
    <string name="ratings_value">0</string>
    <string name="logout">Logout</string>
    <string name="change_user_name">CHANGE OF USERNAME</string>
    <string name="user_name_needed">A name is required.</string>
    <string name="new_user_name_hint">New username</string>
    <string name="menu_profile_title">Profile</string>
    <string name="menu_discover_title">Discover</string>
    <string name="menu_map_title">Map</string>
    <string name="menu_cancel_route_creation">Cancel route creation</string>
    <string name="menu_cancel_route_editing">Cancel route editing</string>
    <string name="menu_confirm_route">Confirm created route</string>
    <string name="menu_save_created_route">Save created route</string>
    <string name="menu_align_created_route">Align created route</string>
    <string name="menu_show_buildings_extrusion">Show 3D buildings</string>
    <string name="gps_not_activated">GPS doesn\'t seem to be enabled! Please enable it in the device settings to continue!</string>
    <string name="location_permission_not_given">Without the permission your current location can\'t be displayed or used!</string>
    <string name="location_permission_explanation">
        The permission for your location is needed to display and track your current location on the map and to use it during navigation!
    </string>
    <string name="map_style_button_tutorial_title">Map styles</string>
    <string name="map_style_button_tutorial_description">With this button you can change the current map style.</string>
    <string name="location_tracking_button_tutorial_title">Show own location</string>
    <string name="location_tracking_button_tutorial_description">With this button you can display and track your own location.</string>
    <string name="build_route_tutorial_title">Route Creation</string>
    <string name="build_route_tutorial_description">Here you can start to create your own route.</string>
    <string name="action_menu_tutorial_title">Actions during route creation</string>
    <string name="action_menu_tutorial_description">You can find useful options during the route creation process here. You can cancel the route creation (x - symbol), try to align your created route and waypoints to existing ways on the campus (magnet symbol) or confirm your route and continue (checkmark symbol).</string>
    <string name="route_creation_options">There are 3 options to create a route:
        \n<ul>
            \n<li>You can activate location tracking and the app will record the route while you walk the route yourself.</li>
            \n<li>You can build the route directly on the map with lines and markers.</li>
            \n<li>You draw the route manually on the map.</li>
        </ul>
    </string>
    <string name="manual_route_creation_option">Create route with waypoints</string>
    <string name="route_draw_option">Draw route on map</string>
    <string name="route_track_option">Track route while walking</string>
    <string name="map_matching_explanation_confirmation">Hey, looks like this is the first time you are using this feature! Do you want to see an explanation of the functionality?</string>
    <string name="map_matching_explanation_title">MapMatching</string>
    <string name="map_matching_explanation_message">Here you can use so-called \"MapMatching\" to automatically match your created routes and markers to known footpaths on the university campus and thus create a more accurate route.
        \nHowever, <b>there are some restrictions</b>:
        \n<ul>
            \n<li>Because only footpaths can be used, routes can also <b>only be found in the exterior of the university</b>, which may cause problems if the created route goes through a building. Markers should therefore not be placed inside buildings.</li>
            \n<li>In addition, it is possible that no suitable route can be created if route points are too far (about 10-15m) away from known footpaths. In this case, it can help to align certain parts of the route a little closer to paths on the map.</li>
        </ul>
    </string>
    <string name="current_waypoints">Currently the route consists of these waypoints:</string>
    <string name="no_current_waypoints">There are no waypoints yet! Click on locations on the map where you want to place waypoints to add some.</string>
    <string name="map_matching_failed">Couldn\'t find a route on the campus that matches the created waypoints!</string>
    <string name="map_matching_request_error">Unfortunately, an error occurred while generating a suitable route! Make sure you have an internet connection or adjust some points slightly.</string>
    <string name="map_matching_succeeded">Successfully created a route from the given waypoints!</string>
    <string name="save_created_route_confirmation">Save created route?</string>
    <string name="create_route_title">Create Route</string>
    <string name="saving_route">Saving route. Please wait …</string>
    <string name="error_saving_route_snapshot">Unfortunately, an error occurred while saving the route!</string>
    <string name="route_edit_instructions">You can add waypoints to your route by clicking on the map and drag markers by long clicking them and moving them to a new place. When you are done, you can click on the "disk" symbol in the top right to save your route.</string>
    <string name="navigation_intro">Please move to the starting position of the route to start the navigation. Once you are there, click on \"Start Navigation\" at the top.</string>
    <string name="route_still_loading">The route is still loading. One moment!</string>
    <string name="direction_route_fetch_error">An error has occurred! Unfortunately, there is no navigation available for this route at the moment!</string>
    <string name="not_on_campus_error">You must be on the campus to use your location for navigation!</string>
    <string name="goal_reached">Good job! You have reached the end of this route!</string>
    <string name="finish_navigation_message">Do you want to leave the navigation?</string>
    <string name="attention">Attention!</string>
    <string name="leave_route_creation_warning">Do you want to leave the route creation mode? Your current progress will be lost!</string>
    <string name="leave_route_editing_warning">If you leave now, this route will not be saved and you lose your progress! Do you really want to go back?</string>
    <string name="leave_navigation_warning">Do you want to leave the navigation? Your current route progress will be lost!</string>
    <string name="change_style_during_route_creation">Unfortunately, it isn\'t possible to change the map style during route creation!</string>
    <string name="delete_waypoint_confirmation">Do you really want to delete this waypoint?</string>
    <string name="delete_marker_confirmation">Do you really want to delete this marker?</string>
    <string name="delete_route_confirmation">Do you really want to delete this route part?</string>
    <string name="no_internet">No internet connection!</string>
    <string name="no_internet_default_explanation">No internet connection could be established! Please check your connection and try again.</string>
    <string name="no_internet_map_matching">An internet connection is required to create a route!</string>
    <string name="no_internet_save_route">To save the route an internet connection is required!</string>
    <string name="too_few_waypoints">There must be at least 2 way points on the map to create a route!</string>
    <string name="too_many_waypoints">Unfortunately, a route with so many waypoints cannot be created! Please try to remove some unnecessary points.</string>
    <string name="no_route_found">No route was found! You have to create a route first before you can continue!</string>
    <string name="not_yet_implemented">"This feature is unfortunately not yet implemented!"</string>
    <string name="confirm_route_creation_warning">If you go to the next step of route creation and then return, you have to start route creation from the beginning! Continue anyway?</string>
    <string name="not_comment_creator">Only the creator of this comment can delete it!</string>
    <string name="not_answer_creator">Only the creator of this answer can delete it!</string>
    <string name="try_again">Try again</string>
    <string name="continue_edit">Continue edit</string>
    <string name="cancel">Cancel</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_button">Login</string>
    <string name="login_text">ExplURe</string>
    <string name="reset_password">Forgot password?</string>
    <string name="or_text">or</string>
    <string name="without_account">Continue without account?</string>
    <string name="sign_up_button">Register?</string>
    <string name="create_profile">Create your profile</string>
    <string name="add_picture_text">Add your profile picture</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="set_user_name">Username</string>
    <string name="text_changes">You can change your picture and username later</string>
    <string name="create_button">Create profile</string>
</resources>