<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".views.StatisticsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorLightGreen">


        <ImageView
            android:id="@+id/profilePicture"
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:srcCompat="@drawable/user_profile_picture" />

        <TextView
            android:id="@+id/userNameTextView"
            android:layout_width="274dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/user_name"
            android:textAlignment="center"
            android:textSize="26sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/statisticsHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorTransparentGrey"
        android:padding="10dp"
        android:text="@string/statistics"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="28sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:stretchColumns="0,1"
            android:padding="25dp"
            android:gravity="center_horizontal">

            <TableRow>
                <TextView
                    android:layout_height="35dp"
                    android:text="@string/distance"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center|center_vertical"
                    android:padding="3dp"
                    android:background="@drawable/button_border"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_height="80dp"
                    android:text="@string/covered_track"
                    android:textSize="20sp"
                    android:gravity="start|center_vertical"
                    android:padding="3dp"
                    android:background="@drawable/button_border"/>
                <TextView
                    android:id="@+id/traveledDistanceTextView"
                    android:layout_height="80dp"
                    android:text="@string/covered_track_value"
                    android:textSize="20sp"
                    android:gravity="end|center_vertical"
                    android:padding="3dp"
                    android:background="@drawable/button_border"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_height="80dp"
                    android:text="@string/started_routes"
                    android:textSize="20sp"
                    android:gravity="start|center_vertical"
                    android:padding="3dp"
                    android:background="@drawable/button_border"/>
                <TextView
                    android:id="@+id/startedRoutesTextView"
                    android:layout_height="80dp"
                    android:text="@string/started_routes_value"
                    android:textSize="20sp"
                    android:gravity="end|center_vertical"
                    android:padding="3dp"
                    android:background="@drawable/button_border"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_height="80dp"
                    android:text="@string/ended_routes"
                    android:textSize="20sp"
                    android:gravity="start|center_vertical"
                    android:padding="3dp"
                    android:background="@drawable/button_border"/>
                <TextView
                    android:id="@+id/endedRoutesTextView"
                    android:layout_height="80dp"
                    android:text="@string/ended_routes_value"
                    android:textSize="20sp"
                    android:gravity="end|center_vertical"
                    android:padding="3dp"
                    android:background="@drawable/button_border"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_height="35dp"
                    android:text="@string/contents"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center|center_vertical"
                    android:layout_marginTop="15dp"
                    android:padding="3dp"
                    android:background="@drawable/button_border"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_height="80dp"
                    android:text="@string/created_routes"
                    android:textSize="20sp"
                    android:gravity="start|center_vertical"
                    android:padding="3dp"
                    android:background="@drawable/button_border"/>
                <TextView
                    android:id="@+id/createdRoutesTextView"
                    android:layout_height="80dp"
                    android:text="@string/created_routes_value"
                    android:textSize="20sp"
                    android:gravity="end|center_vertical"
                    android:padding="3dp"
                    android:background="@drawable/button_border"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_height="80dp"
                    android:text="@string/created_landmarks"
                    android:textSize="20sp"
                    android:gravity="start|center_vertical"
                    android:padding="3dp"
                    android:background="@drawable/button_border"/>
                <TextView
                    android:id="@+id/createdLandmarksTextView"
                    android:layout_height="80dp"
                    android:text="@string/created_landmarks_value"
                    android:textSize="20sp"
                    android:gravity="end|center_vertical"
                    android:padding="3dp"
                    android:background="@drawable/button_border"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_height="35dp"
                    android:text="@string/interaction"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center|center_vertical"
                    android:layout_marginTop="15dp"
                    android:padding="3dp"
                    android:background="@drawable/button_border"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_height="80dp"
                    android:text="@string/comments"
                    android:textSize="20sp"
                    android:gravity="start|center_vertical"
                    android:padding="3dp"
                    android:background="@drawable/button_border"/>
                <TextView
                    android:id="@+id/createdCommentsTextView"
                    android:layout_height="80dp"
                    android:text="@string/comments_value"
                    android:textSize="20sp"
                    android:gravity="end|center_vertical"
                    android:padding="3dp"
                    android:background="@drawable/button_border"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_height="80dp"
                    android:text="@string/ratings"
                    android:textSize="20sp"
                    android:gravity="start|center_vertical"
                    android:padding="3dp"
                    android:background="@drawable/button_border"/>
                <TextView
                    android:id="@+id/createdRatingsTextView"
                    android:layout_height="80dp"
                    android:text="@string/ratings_value"
                    android:textSize="20sp"
                    android:gravity="end|center_vertical"
                    android:padding="3dp"
                    android:background="@drawable/button_border"/>
            </TableRow>

        </TableLayout>

    </ScrollView>

</LinearLayout>