<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!--
    <item
        android:id="@+id/startNavigationButton"
        android:icon="@drawable/ic_navigation_24"
        android:title="Start Navigation"
        android:visible="false"
        app:showAsAction="ifRoom"
        tools:visible="true" />
        -->

    <item
        android:id="@+id/cancelRouteCreationButton"
        android:icon="@drawable/ic_baseline_close_24"
        android:title="@string/menu_cancel_route_creation"
        android:visible="false"
        app:showAsAction="ifRoom"
        tools:visible="true" />

    <item
        android:id="@+id/saveRouteButton"
        android:icon="@drawable/ic_baseline_save_24"
        android:title="@string/menu_save_created_route"
        android:visible="false"
        app:showAsAction="ifRoom"
        tools:visible="true" />

    <item
        android:id="@+id/showMapMatchedButton"
        android:icon="@drawable/ic_magnet"
        android:title="@string/menu_align_created_route"
        android:visible="false"
        app:showAsAction="ifRoom"
        tools:visible="true" />

</menu>